# fantasy-draft-rag

./: .gitignore  README.md  golden_queries.json  pyproject.toml  requirements.txt
.cmux/: setup
.cursor/rules/: project-vision.mdc  python-project.mdc
docs/: ROADMAP.md
notebooks/: 01_data_exploration.ipynb  02_langchain_RAG_tutorial.ipynb  03_sql_tutorial.ipynb  04_sql_chain_exploration.ipynb  normalized_names.csv
notebooks/chroma_langchain_db/: chroma.sqlite3
scripts/: fetch_adp.py  fetch_rosters.py  fetch_stats.py
src/fantasy_draft_ai/: __init__.py
src/fantasy_draft_rag/: __init__.py
src/ff_ai_assistant/: adp_expectation.py  config.py  database.py  sql_chain.py
tests/: test_adp_expectation.py  test_config.py  test_database.py
